--- a/code/index.html
+++ b/code/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
 
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Playfair+Display+SC:wght@700&family=Roboto:wght@100&display=swap"
-  rel="stylesheet">
-
 <head>
+  <!--font link-->
+  <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> -->
+  <!-- <link href="https://fonts.googleapis.com/css2?family=Playfair+Display+SC:wght@700&family=Roboto:wght@100&display=swap"
+    rel="stylesheet"> -->
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>test</title>
+  <title>BoE</title>
   <link rel="stylesheet" href="./style.css" />
 </head>
 
@@ -40,61 +40,75 @@
 
 
   <!--GRID STARTS HERE-->
-  <div class="grid-parent">
+  <div class="wrapper">
 
-    <!--top article fall beauty-->
-    <div class="grid-item grid-one">
-      <h1>FALL INTO BEAUTY</h1>
-      <p id="header">How To Embrace Autumn's Radiance</p>
-      <img class="article-one" src="./images/fallif.jpg" alt="Fall A">
+    <!--article decades beauty-->
+    <div class="everlastingGrace-article">
+      <h1>EVERLASTING GRACE</h1>
+      <p id="beauty">A LESSON OF BEAUTY TROUGH THE DECADES</p>
+      <img class="img_article-everlasting" src="./images/Rebekah W Harkness Jack Mitchell.jpeg" alt="Fall H">
+      <p id="img-credt">Jack Mitchell//Getty Images</p>
     </div>
 
     <!--article (sidebar grid) prioritize-->
-    <div class="grid-item sidebar">
-      <h9>WHAT YOU SHOULD PRIORITIZE THIS AUTUMN</h9>
-      <img class="article-sidebar" src="./images/goal.jpeg" alt="Fall D">
-      <p class="prior-autm"> / SLEEP / </p>
-      <p class="prior-autm"> / HEALTH / </p>
-      <p class="prior-autm"> / FRIENDS / </p>
-      <p class="prior-autm"> / FINANCE / </p>
-      <p class="prior-autm"> / TRAVEL / </p>
-      <p class="prior-autm"> / FOOD / </p>
-      <p class="prior-autm"> / FUN / </p>
+    <div class="prioritize-article">
+      <h2>WHAT YOU SHOULD PRIORITIZE THIS AUTUMN</h2>
+      <img class="img_prioritize" src="./images/goal.jpeg" alt="Coffe goals and watch">
+      <p class="prior-list"> / SLEEP / </p>
+      <p class="prior-list"> / HEALTH / </p>
+      <p class="prior-list"> / FRIENDS / </p>
+      <p class="prior-list"> / FINANCE / </p>
+      <p class="prior-list"> / TRAVEL / </p>
+      <p class="prior-list"> / FOOD / </p>
+      <p class="prior-list"> / FUN / </p>
     </div>
 
     <!--article gold-->
-    <div class="grid-item grid-two">
-      <img class="article-two" src="./images/gull.jpg" alt="Fall C">
-      <h2>GOLDEN AUTUMN ELEGANCE</h2>
+    <div class="golden-article-wrapper">
+      <div class="golden-elegance-article">
+        <h3>GOLDEN AUTUMN ELEGANCE</h3>
+        <img class="img_golden-elegance" src="./images/gull.jpg" alt="Girl in elegant outfit wearing gold earrings">
+      </div>
       <p id="gold">Welcome The Season In Luxurious Gold</p>
     </div>
 
     <!--autumn recipes-->
-    <div class="grid-item grid-four">
+
+    <div class="pumpkin-article">
       <h4>ALL THINGS PUMPKIN</h4>
-      <p id="pumpkrec">Impress your friends with our simple Pumpkin Soup recipe or invite them over for some Pumpkin Pie
+      <p id="pumpkrec">Impress your friends with our simple Pumpkin Soup recipe or invite them over for some Pumpkin
+        Pie
         and Pumpkin Spice Latte!</p>
     </div>
 
     <!--autmn recipes pics-->
-    <div class="grid-item grid-five">
-      <img class="article-pumpk" src="./images/pumpk1.jpg" alt="Fall E">
-    </div>
-    <div class="grid-item grid-six"><img class="article-pumpk" src="./images/pumpk2.jpg" alt="Fall E"></div>
-    <div class="grid-item grid-seven"><img class="article-pumpk" src="./images/pumpk3.jpg" alt="Fall E"></div>
+    <img class="pumpkin-pie-img" src="./images/pumpk1.jpg" alt="Pumpkin pie">
+    <img class="pumpkin-soup-img " src="./images/pumpk2.jpg" alt="Pumpkin soup">
+    <img class="pumpkin-spice-img" src="./images/pumpk3.jpg" alt="Pumpkin Spice Coffe">
 
-    <!--article decades beauty-->
-    <div class="grid-item grid-eight">
-      <h8>TIMELESS BEAUTY;</h8>
-      <p id="beauty">A LESSON OF BEAUTY TROUGH THE DECADES</p>
-      <img class="article-beauty" src="./images/Rebekah W Harkness Jack Mitchell.jpeg" alt="Fall H">
-      <p id="imgb">Jack Mitchell//Getty Images</p>
+
+    <!--Fall beauty article-->
+    <div class="fall-beauty">
+      <h5>FALL INTO BEAUTY</h5>
+      <p id="header">How To Embrace Autumn's Radiance</p>
+      <div class="image-container">
+        <img class="img_fall-beauty" src="./images/fallif.jpg" alt="Smiling girl autumn">
+      </div>
+    </div>
+
+
+    <!--Mushroom article-->
+    <div class="harvest">
+      <h5>HARVEST HIKES</h5>
+      <p id="headerMushroom"> Unearthing Fall's Mushroom Treasures</p>
+      <div class="image-mushroom-container">
+        <img class="img_harvest-mushrooms" src="./images/mushrooms.jpg" alt="Basket with mushrooms">
+      </div>
     </div>
 
   </div>
 
   <!--FOOTER-->
-
   <footer>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
