adjusted responsiveness for tablet and desktop

--- a/code/index.html
+++ b/code/index.html
@@ -397,6 +397,7 @@
         <i class="fa-solid fa-copyright" style="color: #bc4f22"></i>
         <span style="color: #bc4f22">2024 - Created by Vittoria Matteoli</span>
       </div>
+      <div class="empty-column"></div>
       <div class="follow">
         <i
           class="social-icon fa-brands fa-github fa-spin-pulse"
