fixed final version project and added a fade-in animation

--- a/code/index.html
+++ b/code/index.html
@@ -78,7 +78,7 @@
       <!-- hero section END -->
       <!-- News section START -->
 
-      <section>
+      <section class="cards-container">
         <ul class="cards">
           <!-- 1st CARD -->
           <li class="cards-item">
