Add footer and hover effect.

--- a/code/index.html
+++ b/code/index.html
@@ -1,19 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <title>The Daily Sleep</title>
-    <link rel="stylesheet" href="./style.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
 
   <body>
     <header>
-      <img
-        class="logo"
-        src="assets/thedailysleep.png"
-        alt=
-      >
+      <img class="logo" src="assets/thedailysleep.png" alt= >
 
       <h1>The Daily Sleep</h1>
     </header>
@@ -32,7 +28,7 @@
         class="intro-image"
         src="assets/laundry.jpg"
         alt="Image with a laundry machine"
-      >
+      />
       <div class="intro-text">
         <h2>Short story: Laundry day</h2>
         <p>
@@ -121,5 +117,9 @@
         </div>
       </section>
     </div>
+    <footer>
+      <h3>About The Daily Sleep</h3>
+      <p>Sleepy news when you can't sleep.™</p>
+    </footer>
   </body>
 </html>
