tried to add some code

--- a/code/index.html
+++ b/code/index.html
@@ -1,23 +1,42 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <!-- Change the title below -->
-    <title>News Site</title>
-    <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
-  </head>
-  <body>
-    <header>
-      <!-- Some kind of logo and navbar -->
-    </header>
 
-    <section class="big-news">
-      <!-- The big news content -->
-    </section>
+<head>
+  <meta charset="utf-8" />
+  <!-- Title of the puppy news-site -->
+  <title> Puppy News </title>
+  <link rel="stylesheet" href="./style.css" />
+  <!-- meta tag for responsiveness -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <section class="">
-      <!-- The other news  -->
-    </section>
-  </body>
+  <script src="https://kit.fontawesome.com/2e83762929.js" crossorigin="anonymous"></script>
+</head>
+
+<body>
+  <header>
+    <!-- Some kind of logo and navbar -->
+    <nav>
+      <a href="#">
+        <i class="fa-solid fa-dog"></i>
+      </a>
+
+      <a href="#news"> News </a>
+      <a href="#Archive"> Archive </a>
+      <a href="#About"> About </a>
+      <a href="#Contact"> Contact </a>
+
+
+
+    </nav>
+  </header>
+
+  <section class="big-news">
+    <!-- The big news content -->
+  </section>
+
+  <section class="">
+    <!-- The other news  -->
+  </section>
+</body>
+
 </html>
