added more html and css to understand the structure

--- a/code/index.html
+++ b/code/index.html
@@ -14,29 +14,55 @@
 
 <body>
   <header>
-    <!-- Some kind of logo and navbar -->
-    <nav>
-      <a href="#">
+    <!-- This is the start of the header with navigation bar, logo and links -->
+    <div class="hamburger-menu" id="mobile-menu"></div>
+    <span></span>
+    <span></span>
+    <span></span>
+    <span></span>
+    </div>
+
+    <nav class="navbar">
+      <a id="logo" href="#Puppy-news-logo">
         <i class="fa-solid fa-dog"></i>
       </a>
-
-      <a href="#news"> News </a>
-      <a href="#Archive"> Archive </a>
-      <a href="#About"> About </a>
-      <a href="#Contact"> Contact </a>
-
-
-
+      <div class="nav-links">
+        <a href="#news"> News </a>
+        <a href="#Archive"> Archive </a>
+        <a href="#About"> About </a>
+        <a href="#Contact"> Contact </a>
+      </div>
     </nav>
   </header>
 
-  <section class="big-news">
-    <!-- The big news content -->
-  </section>
+  <main>
+    <section class="welcome">
+      <!-- Welcome content -->
+      <h1> Welcome to our Puppy news</h1>
+      <p> Here you will find the newest updates about our current puppies! </p>
+      <p> Both mom and dad are toy poodles and our current puppies are Lisa, Nelly and Molly. </p>
+    </section>
 
-  <section class="">
-    <!-- The other news  -->
-  </section>
+    <section class="main-article">
+      <!-- The big news content -->
+      <img src="./small-puppy.JPG" alt="Picture of small puppy">
+
+
+
+
+    </section>
+
+    <section class="all-news">
+      <!-- All of the other news  -->
+      <img src="./puppy-getting-comfy.JPG" alt="Puppy getting comfy">
+      <img src="./chilling-on-the-couch.JPG" alt="Puppy on the couch">
+      <img src="./waiting-to-play.JPG" alt="Puppy waiting to play">
+      <img src="./cuddling-with-toy.jpg" alt="Puppy cuddling with toy">
+      <img src="./ready-for-christmas.JPG" alt="Puppy ready for christmas">
+
+
+    </section>
+  </main>
 </body>
 
 </html>
