changed the navigation and made sure that there is hamburger-menu. Styled most of the navbar

--- a/code/index.html
+++ b/code/index.html
@@ -15,23 +15,40 @@
 <body>
   <header>
     <!-- This is the start of the header with navigation bar, logo and links -->
-    <div class="hamburger-menu" id="mobile-menu"></div>
-    <span></span>
-    <span></span>
-    <span></span>
-    <span></span>
-    </div>
-
     <nav class="navbar">
-      <a id="logo" href="#Puppy-news-logo">
-        <i class="fa-solid fa-dog"></i>
+      <a class="logo" href="#Puppy-news-logo">
+        <i class="fa-solid fa-dog">
+        </i>
       </a>
-      <div class="nav-links">
-        <a href="#news"> News </a>
-        <a href="#Archive"> Archive </a>
-        <a href="#About"> About </a>
-        <a href="#Contact"> Contact </a>
+
+      <!-- This is the menu for mobile -->
+      <div class="hamburger-menu">
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
       </div>
+
+      <!-- This is the menu for desktop and tablet -->
+      <ul class="nav-menu">
+        <li class="nav-item">
+          <a class="nav-link" href="#news"> News
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#about"> About
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#archive"> Archive
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#contact"> Contact
+          </a>
+        </li>
+      </ul>
+
     </nav>
   </header>
 
